...
   * various screens of the application.
   */
  object Tag {

    /** Shared constants for tagging UI components in the CreateAlertScreen and EditAlertScreen. */
    object AlertInputs {
      const val INSTRUCTION_TEXT = "instructionText"
      const val PRODUCT_FIELD = "productField"
      const val URGENCY_FIELD = "urgencyField"
      const val DROPDOWN_ITEM = "dropdownItem"
      const val LOCATION_FIELD = "locationField"
      const val MESSAGE_FIELD = "messageField"
      const val CURRENT_LOCATION = "currentLocation"
    }

    /** Constants for tagging UI components specific to the CreateAlertScreen * */
    object CreateAlertScreen {
      const val SCREEN = "createAlertScreen"
      const val SUBMIT_BUTTON = "submitButton"
    }

    /** Constants for tagging UI components specific to the EditAlertScreen */
    object EditAlertScreen {
      const val SCREEN = "editAlertScreen"
      const val DELETE_BUTTON = "deleteButton"
      const val SAVE_BUTTON = "saveButton"
      const val RESOLVE_BUTTON = "resolveButton"
    }

    /** Constants for tagging UI components in the AlertListsScreen. */
    object AlertListsScreen {
      const val SCREEN = "alertListScreen"
      const val TAB_ROW = "tabRow"
...
      const val RESOLVE_ALERT_BUTTON = "resolveAlertButton"
      const val ACCEPT_ALERT_BUTTON = "acceptAlertButton"
    }

    /** Constants for tagging UI components in the BottomNavigationMenu. */
    object BottomNavigationMenu {
      const val BOTTOM_NAVIGATION_MENU = "bottomNavigationMenu"
      const val BOTTOM_NAVIGATION_MENU_ITEM = "bottomNavigationMenu"
      const val CONNECTIVITY_BANNER = "connectivityBanner"
      const val CONNECTIVITY_BANNER_TEXT = "connectivityBannerText"
    }

    /** Constants for tagging UI components in the TopAppBar. */
    object TopAppBar {
      const val TOP_BAR = "topBar"
      const val GO_BACK_BUTTON = "goBackButton"
      const val SETTINGS_BUTTON = "settingsButton"
      const val CHAT_BUTTON = "chatButton"
      const val EDIT_BUTTON = "editButton"
      const val TITLE_TEXT = "titleText"
    }

    /** Constants for tagging UI components in the profile screens. */
    object ProfileScreens {
      /** Constants for tagging UI components in the CreateProfileScreen. */
      object CreateProfileScreen {
...
