<resources>
    <string name="app_name">PeriodPals</string>
    <string name="google_client_id">683519755288-5dhnhoqhelf1lfsdpb9l1a8lghe445c5.apps.googleusercontent.com</string>

    <!-- Sign In Screen -->
    <string name="sign_in_instruction">Sign in to your account</string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="sign_in_no_account_text">Not registered yet?\u00A0</string>
    <string name="sign_in_sign_up_text">Sign up here!</string>

    <string name="sign_in_toast_successful_sign_in">Login Successful</string>
    <string name="sign_in_toast_failed_sign_in">Login Failed</string>
    <string name="sign_in_toast_invalid_attempt">Invalid email or password.</string>

    <!-- Sign Up Screen -->
    <string name="sign_up_instruction">Create your account</string>
    <string name="sign_up_confirm_password_instruction">Confirm your password</string>
    <string name="sign_up_button_text">Sign up</string>
    <string name="sign_up_already_account_text">Already registered?\u00A0</string>
    <string name="sign_up_sign_in_text">Sign in!</string>

    <string name="sign_up_toast_successful_sign_up">Account Creation Successful</string>
    <string name="sign_up_toast_failed_sign_up">Account Creation Failed</string>
    <string name="sign_up_toast_invalid_attempt">Invalid email or password</string>

    <string name="sign_up_not_matching_password_error_message">Passwords do not match</string>

    <!-- Create Profile Screen -->
    <string name="create_profile_screen_title">Create Your Account</string>
    <string name="create_profile_radius_explanation_text">
        By specifying this radius, you can control the geographical range for receiving alerts from other users.
    </string>

    <!-- Edit Profile Screen -->
    <string name="edit_profile_screen_title">Edit Your Profile</string>

    <!-- Profile Screen -->
    <string name="profile_screen_title">Your Profile</string>
    <string name="profile_default_name">Error loading name, try again later.</string>
    <string name="profile_default_description">Error loading description, try again later.</string>
    <string name="profile_new_user">New user</string>
    <string name="profile_number_interaction_text">Number of interactions: </string>
    <string name="profile_reviews_title">Reviews</string>
    <string name="profile_no_reviews_text">No reviews yet...</string>

    <!-- Settings Screen -->
    <string name="settings_screen_title">My Settings</string>

    <string name="notifications_and_location_text">To enable/disable notifications or location, please go to your phone\'s settings</string>

    <string name="settings_account_password">Change Password</string>
    <string name="settings_account_sign_out">Sign Out</string>
    <string name="settings_account_delete">Delete Account</string>

    <string name="settings_dialog_text">Are you sure you want to delete your account?</string>

    <string name="settings_toast_success_sign_out">Sign out successful</string>
    <string name="settings_toast_failure_sign_out">Failed to sign out</string>
    <string name="settings_toast_success_delete">Account deleted successfully</string>
    <string name="settings_toast_failure_delete">Failed to delete account</string>
    <string name="settings_toast_load_data_failure">Failed loading user authentication data</string>

    <!-- Create Alert Screen -->
    <string name="create_alert_screen_title">Create Alert</string>
    <string name="create_alert_instruction_text">
        Push a notification to users near you! If they are available and have the products you need,
        they\'ll be able to help you!
    </string>

    <string name="create_alert_product_dropdown_default_value">Please choose a product</string>
    <string name="create_alert_urgency_dropdown_default_value">Please choose an urgency level</string>
    <string name="create_alert_submission_button_text">Ask for Help</string>

    <string name="create_alert_toast_successful_submission_message">Alert sent</string>

    <!-- Edit Alert Screen -->
    <string name="edit_alert_screen_title">Edit Your Alert</string>
    <string name="edit_alert_instruction_text">
        Edit, delete or resolve your push notification alert for nearby pals.
    </string>

    <string name="edit_alert_delete_button_text">Delete</string>
    <string name="edit_alert_save_button_text">Save</string>
    <string name="edit_alert_resolve_button_text">Resolve</string>

    <string name="edit_alert_toast_successful_update">Alert updated</string>
    <string name="edit_alert_toast_not_implemented_yet">This feature is not implemented yet</string>

    <!-- Alert Lists Screen -->
    <string name="alert_lists_screen_title">Alert Lists</string>
    <string name="alert_lists_tab_my_alerts_title">My Alerts</string>
    <string name="alert_lists_tab_pals_alerts_title">Pals Alerts</string>

    <string name="alert_lists_no_my_alerts_dialog">You haven\'t asked for help yet !</string>
    <string name="alert_lists_no_pals_alerts_dialog">No pal needs help yet !</string>

    <string name="alert_lists_my_alert_edit_text">Edit</string>
    <string name="alert_lists_pal_alert_accept_text">Accept</string>
    <string name="alert_lists_pal_alert_unaccept_text">Un-accept</string>

    <string name="alert_lists_filter_default">No Preference</string>

    <!-- Map Screen -->
    <string name="map_screen_title">Map</string>
    <string name="map_your_location_marker_title">Your location</string>

    <!-- Tile URLs -->
    <string name="light_tiles_url">https://tiles.stadiamaps.com/tiles/alidade_smooth/</string>
    <string name="dark_tiles_url">https://tiles.stadiamaps.com/tiles/alidade_smooth_dark/</string>

    <!-- Tile Names -->
    <string name="light_tiles_name">light_tiles</string>
    <string name="dark_tiles_name">dark_tiles</string>

    <!-- Timer Screen -->
    <string name="timer_screen_title">Tampon Timer</string>
    <string name="timer_displayed_text_start">Start your tampon timer.\nYou’ll be reminded to change it!</string>
    <string name="timer_useful_tip_text">
        Leaving a tampon in for over 3-4 hours too often can cause irritation and infections.
        Regular changes are essential to avoid risks.
        Choosing cotton or natural tampons helps reduce irritation and improve hygiene.
    </string>
    <string name="timer_start">START</string>
    <string name="timer_reset">RESET</string>
    <string name="timer_stop">STOP</string>

    <!-- Channel Screen -->
    <string name="title_activity_channel">ChannelActivity</string>
    <string name="channel_screen_title">My Chats</string>

    <!-- Timer Screen -->
    <string name="bottom_bar_banner_text">No connection</string>

</resources>